<resources>
    <string name="app_name" translatable="false">Prima</string>
    <string name="album_cover">Album cover</string>
    <string name="track_settings_button">track settings button</string>
    <string name="undefined_time">00:00:00</string>
    <string name="play_button">Play Button</string>
    <string name="previous_track">Previous Track</string>
    <string name="next_track">Next Track</string>
    <string name="repeat_track_s">Repeat Track(-s)</string>
    <string name="current_playlist">Current Playlist</string>
    <string name="to_track_list">To Track List</string>
    <string name="return_to_track_list">Return To Track List</string>
    <string name="tracks">Tracks</string>
    <string name="select_tracks_or_playlists">select tracks or playlists</string>
    <string name="version">v 1.1.1.1</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="about_app">About App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="change_track_s_information">Change track\'s information</string>
    <string name="add_to_playlist">Add to playlist (or remove)</string>
    <string name="find">Find</string>
    <string name="playlist_image">playlist cover</string>
    <string name="track_item_settings">track’s settings</string>
    <string name="artist_item_settings">artist’s settings</string>
    <string name="add_to_favourites_or_remove">Add to favourites (or remove)</string>
    <string name="unknown_track">Unknown Track</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="add_playlist">Add playlist</string>
    <string name="playlist_title">Playlist title</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="playlist_exists">A playlist with this name already exists</string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="remove_playlist">Remove playlist</string>
    <string name="ays_remove_playlist">Are you sure you want to delete this playlist?</string>
    <string name="albums">Albums</string>
    <string name="track_collections">Track collections</string>
    <string name="select_all">Select All</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="remove_track">Remove track</string>
    <string name="file_is_corrupted">File is corrupted</string>
    <string name="remove_track_message">Are you sure you want to delete this track? It will be removed forever.</string>
    <string name="shuffle_tracks_button">Shuffling tracks button</string>
    <string name="language_button">Language select button</string>
    <string name="language">Language</string>
    <string name="themes">Themes</string>
    <string name="playlist_circle_image">Playlists with a rounded cover</string>
    <string name="font">Font</string>
    <string name="english" translatable="false">English</string>
    <string name="arabian" translatable="false">العربية</string>
    <string name="belarusian" translatable="false">Беларускі</string>
    <string name="bulgarian" translatable="false">Български</string>
    <string name="deutsch" translatable="false">Deutsch</string>
    <string name="greek" translatable="false">Ελληνική</string>
    <string name="spanish" translatable="false">Español</string>
    <string name="french" translatable="false">Français</string>
    <string name="italian" translatable="false">Italiano</string>
    <string name="korean" translatable="false">한국어</string>
    <string name="mongolian" translatable="false">Монголын</string>
    <string name="norwegian" translatable="false">Norsk</string>
    <string name="polish" translatable="false">Polski</string>
    <string name="portuguese" translatable="false">Português</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="swedish" translatable="false">Svensk</string>
    <string name="turkish" translatable="false">Türk</string>
    <string name="ukrainian" translatable="false">Український</string>
    <string name="chinese" translatable="false">中文</string>
    <string name="purple">Purple Day</string>
    <string name="purple_night">Purple Night</string>
    <string name="red">Red Day</string>
    <string name="red_night">Red Night</string>
    <string name="blue">Blue Day</string>
    <string name="blue_night">Blue Night</string>
    <string name="green">Green Day</string>
    <string name="green_night">Green Night</string>
    <string name="orange">Orange Day</string>
    <string name="orange_night">Orange Night</string>
    <string name="lemon">Lemon Day</string>
    <string name="lemon_night">Lemon Night</string>
    <string name="turquoise">Turquoise Day</string>
    <string name="turquoise_night">Turquoise Night</string>
    <string name="green_turquoise">Green Turquoise Day</string>
    <string name="green_turquoise_night">Green Turquoise Night</string>
    <string name="sea">Sea Day</string>
    <string name="sea_night">Sea Night</string>
    <string name="pink">Pink Day</string>
    <string name="pink_night">Pink Night</string>
    <string name="equalizer">Equalizer</string>
    <string name="bass">Bass</string>
    <string name="custom">Custom</string>
    <string name="normal">Normal</string>
    <string name="classic">Classic</string>
    <string name="dance">Dance</string>
    <string name="flat">Flat</string>
    <string name="folk">Folk</string>
    <string name="heavy_metal">Heavy Metal</string>
    <string name="hip_hop">Hip Hop</string>
    <string name="jazz">Jazz</string>
    <string name="pop">Pop</string>
    <string name="rock">Rock</string>
    <string name="first_play">Firstly you need to start listening to the track</string>
    <string name="update_now">Update now</string>
    <string name="pitch">Pitch</string>
    <string name="speed">Speed</string>
    <string name="github" translatable="false">Github</string>
    <string name="faq" translatable="false">FAQ</string>
    <string name="email">Email</string>
    <string name="send_email">Send Email</string>
    <string name="_1_what_is_prima">1. What is “Prima”?</string>
    <string name="what_is_prima_answer">Prima is a music player for Android that works with tracks, artists and albums on your device. It supports many file formats. Prima supports audiobooks. Prima also has an equalizer, a track clipper, an MP3 converter and many other interesting features. Prima is fully customizable: you can choose the language (20 languages), font (about 100) and themes. You can also set your own background image. All this can be found in the settings.</string>
    <string name="_3_changing_tracks_info_issues">3. Changing tracks’ info issues</string>
    <string name="changing_tracks_info_answer">Prior to Android 10, Prima can easily change track metadata. In Android 10, the app will ask for change permission for each file you want to change. Starting with Android 11, changing track metadata has become a big problem due to the fact that in Android 10 they switched to a different type of storage. Therefore, permission is requested to access the entire file system so that the application can change the tags inside the file.</string>
    <string name="why_does_the_app_request_permissions">2. Why does Prima requests permissions?</string>
    <string name="permissions_answer">For full functionality, Prima requests the necessary permissions.
        First of all, it asks about reading files on your device.
    Well, it is obvious - app works with music on your device.
    The second one is about phone state.
    It needs to run background service, so you can start listening to the music, switch on another app, but music will continue playing.
    Also service uses headset buttons and their callbacks.
    The third one is about audio recording.
    It is used to show beautiful audio visualizer when you listening to the music and for your microphone if you want to record anything.
    The last one is about reading contacts on your phone.
    It is used for audio trimmer to set a ringtone for a specific contact.
    Also, if you are an Android 11+ user, app will request permission about reading and changing all files in external storage.
    Don’t worry, you are safe :}
    It is needed to generate new music files (for instance, with audio trimmer or from YouTube) and change tracks’ tags.</string>
    <string name="_4_what_is_custom_playlist">4. What is a custom playlist?</string>
    <string name="custom_playlist_answer">Custom playlists are playlists created by user.
        They are fully modifiable: you can change their title, image, add some tracks or even remove them.
    You can not have two or more playlists with the same title - the new one will not be created.</string>
    <string name="about_languages">5. About languages</string>
    <string name="where_language_answer">I have translated Prima only into the most used languages.
        If your language is not among them, you should not be sad - you can write to me (the developer) about it and I will definitely add your language if I will find a translator.
        However, I can not promise that the translation will be correct, even today translators make mistakes.
        Unfortunately, I am not a guru of foreign languages and I speak only English and Russian, so there may be translation inaccuracies in the application.
        If you find an error, let me know about it.</string>
    <string name="about_gtm_question">5. What is “Guess the Melody”?</string>
    <string name="about_gtm">“Guess the Melody” is the game that checks your knowledge of tracks that you listen. Your task is to guess the track by its snippet. Read more in “About game”</string>
    <string name="_7_what_is_equalizer">6. What is an “Equalizer”?</string>
    <string name="what_is_equalizer_answer">To put it simply, the equalizer is a tool that allows you to adjust the sound.
        In my equalizer, you can modify the frequencies. Also it\'s possible to change bass, reverb, pitch and speed.
        (You cannot change  pitch and speed in Android 6 and 10. Android 6 doesn\'t support them and Android 10 can\'t have more than one audio effect at the same time)
        You can enable it when you started listening for the first time during the session.
        This is due to the fact that the equalizer needs to know which audio session to change.
        Also in the settings you can select starting with an equalizer feature.
        After you have started listening to a track for the first time, you can turn it on and off at any time.
        The equalizer is located at the bottom of the playing panel.</string>
    <string name="what_is_audio_trimmer">7. What is “Audio Trimmer”?</string>
    <string name="by_title">By Title</string>
    <string name="by_artist">By Artist</string>
    <string name="by_album">By Album</string>
    <string name="by_date">By Date</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="search_by">Search by</string>
    <string name="api_key">Your API key</string>
    <string name="mp3_converter">MP3 Converter</string>
    <string name="guess_the_melody">Guess the Melody</string>
    <string name="hide">Hide</string>
</resources>