<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ff_tracks"
        android:title="@string/tracks" />

    <item
        android:id="@+id/ff_current_playlist"
        android:title="@string/current_playlist"/>

    <item
        android:id="@+id/ff_albums"
        android:title="@string/albums"/>

    <item
        android:id="@+id/ff_playlists"
        android:title="@string/playlists"/>

    <item
        android:id="@+id/ff_artists"
        android:title="@string/artists"/>

    <item
        android:id="@+id/ff_favourite_tracks"
        android:title="@string/favourite_tracks"/>

    <item
        android:id="@+id/ff_favourite_artists"
        android:title="@string/favourite_artists"/>

    <item
        android:id="@+id/ff_mp3_converter"
        android:title="@string/mp3_converter"/>

    <item
        android:id="@+id/ff_gtm"
        android:title="@string/guess_the_melody"/>

</menu>