<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/asc"
        android:title="@string/ascending"
        android:checkable="true"/>

    <item
        android:id="@+id/desc"
        android:title="@string/descending"
        android:checkable="true"/>

    <item
        android:id="@+id/order_title"
        android:title="@string/by_title"
        android:checkable="true"/>

    <item
        android:id="@+id/order_artist"
        android:title="@string/by_artist"
        android:checkable="true"/>

    <item
        android:id="@+id/order_album"
        android:title="@string/by_album"
        android:checkable="true"/>

    <item
        android:id="@+id/order_date"
        android:title="@string/by_date"
        android:checkable="true"/>

</menu>