<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/cp_search"
        android:icon="@drawable/search_icon"
        android:title="@string/find"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/cp_find_by"
        android:icon="@drawable/param"
        android:title="@string/search_by"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/rename_playlist"
        android:icon="@drawable/edit_icon"
        android:title="@string/rename_playlist"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/remove_playlist"
        android:icon="@drawable/delete_icon"
        android:title="@string/remove_playlist"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/hide"
        android:icon="@drawable/hide"
        android:title="@string/hide"
        app:showAsAction="ifRoom" />

</menu>