<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/accept_selected_items"
        android:icon="@drawable/tick"
        android:title="@string/ok"
        app:showAsAction="always" />

    <item
        android:id="@+id/select_find"
        android:icon="@drawable/search_icon"
        android:title="@string/find"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/select_find_by"
        android:icon="@drawable/param"
        android:title="@string/search_by"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/select_all"
        android:icon="@drawable/checkbox_icon"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />
</menu>