<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tracks">

    <fragment
        android:id="@+id/nav_tracks"
        android:name="com.app.musicplayer.fragments.TracksFragment"
        android:label="@string/tracks"
        tools:layout="@layout/fragment_track_list" />

    <fragment
        android:id="@+id/nav_playlists"
        android:name="com.app.musicplayer.fragments.PlaylistsFragment"
        android:label="@string/playlists"
        tools:layout="@layout/fragment_playlists" />

    <fragment
        android:id="@+id/nav_artists"
        android:name="com.app.musicplayer.fragments.ArtistsFragment"
        android:label="@string/artists"
        tools:layout="@layout/fragment_artists" />
</navigation>